# SOPA-Spatial

./: .gitignore  ENVIRONMENT_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  Multiomics_SOPA_quickstart.md  README.md  environment.yml  pyproject.toml  run_janesick_pipeline.sh  run_janesick_snakemake.sh  setup_environment.sh  setup_local_imports.py  spatch_implementation_plan.md
configs/: codex_breast_cancer.yaml  codex_coad.yaml  janesick_breast_cancer.yaml  janesick_sopa.yaml  multimodal_xenium_codex.yaml  spatch_full.yaml  xenium_example.yaml
configs/examples/: annotation_consensus.yaml  dapi_tissue_mask.yaml  grid_binning.yaml  image_registration.yaml  spatial_cluster.yaml
docs/: ENVIRONMENT_SETUP.md  JANESICK_PIPELINE_SETUP.md  JANESICK_RESULTS_EXPLORATION.md  QUICKSTART_VALIDATION_REPORT.md
notebooks/: 01_spatch_workflow_example.ipynb  02_janesick_breast_cancer_analysis.ipynb
profiles/parallel/: config.yaml
samplesheets/: example_multimodal.csv
scripts/: prepare_codex_sdata.py
sopa/workflow/: Snakefile
sopa/workflow/src/: paths.py
spatch_modules/: __init__.py  base.py  cli.py  io.py  registry.py  runner.py  sopa_plugin.py
spatch_modules/builtin/: __init__.py  annotation_consensus.py  cell_shape_metrics.py  codex_loader.py  dapi_tissue_mask.py  diffusion_analysis.py  gene_protein_correlation.py  grid_binning.py  image_registration.py  pipeline_visualizations.py  spatial_cluster.py
user_modules/: README.md
